--- a/templates/search.html
+++ b/templates/search.html
@@ -58,160 +58,194 @@
     <div class="title">
         search / 
 
-        <span id="profile-name">
-            {{ profile.name }}
+        <span id="profile-namef">
+            {{ resource_name }}
         </span>
-    </div>
-
-    <div class="subtitle">
-        <div id="profile-location">
-            {{ profile.location }}
-        </div>
-        <div id="profile-genres">
-            {% for genre in profile.genres %}
-                {{ genre }}
-            {% endfor %}
-        </div>
     </div>
 
 </div><!--END dir -->
 
-
-<!-- content buttons -->
-<div class="content-buttons">
-
-    <div class="button bbb">
-        <a href="" id="similar-artists-button" class="button-text ">
-            <span class="click-div"></span>Similar Artists
-        </a>
-    </div>
-
-    <div class="button bbb">
-        <a href="" id="songs-button" class="button-text ">
-            <span class="click-div"></span>Songs
-        </a>
-    </div>
-
-    <div class="button bbb">
-        <a href="" id="similar-songs-button" class="button-text ">
-            <span class="click-div"></span>Recommended Songs
-        </a>
-    </div>
-
-</div><!--END content-buttons -->
-
-
 <hr>
 
-
-<!-- content -->
-<div id="similar_artists-content" class="content bbb">
-    <table id="similar_artists-table">
-        <thead class="title header">
-            <tr>
-                <th colspan="2">
-                    Similar Artists
-                </th>
-            </tr>
-        </thead>
-
-        <tfoot id="similar_artists-tfoot" class="title header">
-            {% if similar_artists.next %}
-            <tr>
-                <td colspan="2">
-                    <a href = "similar/?type=artists" >view more</a>
-                </td>
-            </tr>
-            {% endif %}
-        </tfoot>
-
-        <tbody id="similar_artists-tbody">
-            {% for artist in similar_artists.data %}
+{% if page_type %}
+    <!-- single content -->
+    <div class="content bbb">
+        <table id="content-table">
+            <thead id="content-thead" class="title header">
                 <tr>
-                    <td>
-                        {{ forloop.counter0|add:similar_artists.offset }}
-                    </td>
-                    <td>
-                        <a href = "/music/{{ artist.name|space_to_plus }}/" >{{ artist.name }}</a>
-                    </td>
+                    <th colspan="2">
+                        {{ page_type }}
+                    </th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
 
-</div>
-
-<div id="songs-content" class="content bbb">
-    <table id="songs-table">
-        <thead class="title header">
-            <tr>
-                <th colspan="2">
-                    Songs
-                </th>
-            </tr>
-        </thead>
-
-        <tfoot id="songs-tfoot" class="title header">
-            {% if songs.next %}
-            <tr>
-                <td colspan="2">
-                    <a href = "songs/" >view more</a>
-                </td>
-            </tr>
-            {% endif %}
-        </tfoot>
-
-        <tbody id="songs-tbody">
-            {% for song in songs.data %}
+            <tfoot id="content-tfoot" class="title header">
                 <tr>
-                    <td>
-                        {{ forloop.counter0|add:songs.offset }}
-                    </td>
-                    <td>
-                        <a href = "/music/{{ song.artist_name|space_to_plus }}/{{ song.title|space_to_plus }}" >{{ song.title }}</a>
-                    </td>
+                    <div class="title header">
+                        <td>
+                            <div id="content-previous">
+                                {% if content.previous %}
+                                    <a href = "?page={{ content.previous }}/" >previous</a>
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td>
+                            <div id="content-current">
+                                {% if content.current %}
+                                    {{ content.current }} of {{ content.total }}
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td>
+                            <div id="content-next">
+                                {% if content.next %}
+                                    <a href = "?page={{ content.next }}/" >next</a>
+                                {% endif %}
+                            </div>
+                        </td>
+                    </div>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </tfoot>
 
-</div>
+            <tbody id="content-tbody">
+                {% for item in content.data %}
+                    <tr>
+                        <td>
+                            {{ forloop.counter0|add:content.offset }}
+                        </td>
+                        <td>
+                            {% if item.name %}
+                                <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
+                            {% else %}
+                                <a href = "/music/{{ item.artist_name|space_to_plus }}/{{ item.title|space_to_plus }}/" >{{ item.title }}</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div><!--END single content -->
 
-<div id="similar_songs-content" class="content bbb">
-    <table id="similar_songs-table">
-        <thead class="title header">
-            <tr>
-                <th colspan="2">
-                    Recommended Songs
-                </th>
-            </tr>
-        </thead>
+{% else %}
 
-        <tfoot id="similar_songs-tfoot" class="title header">
-            {% if similar_songs.next %}
-            <tr>
-                <td colspan="2">
-                    <a href = "similar/?type=songs" >view more</a>
-                </td>
-            </tr>
-            {% endif %}
-        </tfoot>
-
-        <tbody id="similar_songs-tbody">
-            {% for song in similar_songs.data %}
+<!-- dual content -->
+<div class="content bbb">
+    <div class="column">
+        <table id="search_artists-table">
+            <thead id="search_artists-thead" class="title header">
                 <tr>
-                    <td>
-                        {{ forloop.counter0|add:similar_songs.offset }}
-                    </td>
-                    <td>
-                        <a href = "/music/{{ song.artist_name|space_to_plus }}/{{ song.title|space_to_plus }}" >{{ song.title }}</a>
-                    </td>
+                    <th colspan="2">
+                        Artists
+                    </th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
 
-</div><!--END content -->
+            <tfoot id="search_artists-tfoot" class="title header">
+                <tr>
+                    <div class="title header">
+                        <td>
+                            <div id="search_artists-previous">
+                                {% if search_artists.previous %}
+                                    <a href = "?page={{ search_artists.previous }}/" >previous</a>
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td>
+                            <div id="search_artists-current">
+                                {% if search_artists.current %}
+                                    {{ search_artists.current }} of {{ search_artists.total }}
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td>
+                            <div id="search_artists-next">
+                                {% if search_artists.next %}
+                                    <a href = "?page={{ search_artists.next }}/" >next</a>
+                                {% endif %}
+                            </div>
+                        </td>
+                    </div>
+                </tr>
+            </tfoot>
+
+            <tbody id="search_artists-tbody">
+                {% for item in search_artists.data %}
+                    <tr>
+                        <td>
+                            {{ forloop.counter0|add:search_artists.offset }}
+                        </td>
+                        <td>
+                            {% if item.name %}
+                                <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
+                            {% else %}
+                                <a href = "/music/{{ item.artist_name|space_to_plus }}/{{ item.title|space_to_plus }}/" >{{ item.title }}</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div><!--END search artists -->
+
+    <!-- search songs -->
+    <div class="column">
+        <table id="search_songs-table">
+            <thead id="search_songs-thead" class="title header">
+                <tr>
+                    <th colspan="2">
+                        Songs
+                    </th>
+                </tr>
+            </thead>
+
+            <tfoot id="search_songs-tfoot" class="title header">
+                <tr>
+                    <div class="title header">
+                        <td>
+                            <div id="search_songs-previous">
+                                {% if search_songs.previous %}
+                                    <a href = "?page={{ search_songs.previous }}/" >previous</a>
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td>
+                            <div id="search_songs-current">
+                                {% if search_songs.current %}
+                                    {{ search_songs.current }} of {{ search_songs.total }}
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td>
+                            <div id="search_songs-next">
+                                {% if search_songs.next %}
+                                    <a href = "?page={{ search_songs.next }}/" >next</a>
+                                {% endif %}
+                            </div>
+                        </td>
+                    </div>
+                </tr>
+            </tfoot>
+
+            <tbody id="search_songs-tbody">
+                {% for item in search_songs.data %}
+                    <tr>
+                        <td>
+                            {{ forloop.counter0|add:search_songs.offset }}
+                        </td>
+                        <td>
+                            {% if item.name %}
+                                <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
+                            {% else %}
+                                <a href = "/music/{{ item.artist_name|space_to_plus }}/{{ item.title|space_to_plus }}/" >{{ item.title }}</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div><!--END search songs -->
+</div><!--END dual content -->
+{% endif %}
 
 
 <script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
@@ -227,7 +261,7 @@
         });
 
         $('a#clear').click( function() { 
-            remove_resource("{{ resource }}"); 
+            remove_resource("{{ resource_id }}"); 
             return false; 
         });
     </script>
@@ -235,7 +269,10 @@
 
 {% for pending in pending_content %}
     <script type="text/javascript">
-        setTimeout(dispatch("{{ resource }}", "{{ resource_id }}", "{{ pending }}", 0, "{{ page }}"), 1500);
+        setTimeout(
+            dispatch("{{ resource_id }}", "{{ resource_name }}", "{{ pending }}", "{{ use_generic_key }}", 0, "{{ page }}")
+            , 1500
+        );
     </script>
 {% endfor %}
 
