--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -11,11 +11,69 @@ html, body {
 */
 .content {
     display: block;
-    width: 975px;
-    margin: 20px auto;
+    width: 978px;
+    /*margin: 20px auto;*/
+    margin: 0 auto;
     overflow: hidden;
 }
 .content .column {
     float: left;
     width: 487px;
+}
+
+/*
+    artist grid
+*/
+.artist-grid {
+    display: block;
+}
+.artist-grid .tile {
+    width: 312px;
+    height: 200px;
+    float: left;
+    margin: 5px;
+    position: relative;
+    overflow: hidden;
+    border: 2px solid #1C2A3B;
+}
+/*.artist-grid img {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}*/
+.artist-grid img {
+    left: 50%;
+    margin-left: -200px;
+    position: absolute;
+}
+.artist-grid .tile .tile-text {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background-color: gray;
+    padding: 4px 7px;
+}
+
+/*
+    tables
+*/
+.index {
+    width: 20px;
+}
+
+.table-nav {
+    display: block;
+    clear: both;
+}
+.table-nav .title {
+    float: left;
+    clear: both;
+}
+.table-nav #previous, #current, #next {
+    float: right;
+    margin-left: 30px;
+    margin-top: 9px;
 }
