--- a/templates/top-artists.html
+++ b/templates/top-artists.html
@@ -54,95 +54,42 @@
 </div><!--END nav -->
 
 <!-- dir -->
-<div class="dir content">
-    <span class="title">
-        artist / 
+<div class="dir">
+    <div class="title">
+        top artists /
+    </div>
 
-        <a href="/music/{{ resource_name }}/">
-            {{ resource_name }}
-        </a>
-    </span>
+    <div class="subtitle">
+        <div id="profile-location">
+            {{ profile.location }}
+        </div>
+        <div id="profile-genres">
+            {% for genre in profile.genres %}
+                {{ genre }}
+            {% endfor %}
+        </div>
+    </div>
 
-    <span class="button">
-        <a href="/music/{{ resource_name|space_to_plus }}/recommended/">
-            Recommended Songs
-        </a>
-    </span>
 
-    <span class="button">
-        <a href="/music/{{ resource_name|space_to_plus }}/similar/">
-            Similar Artists
-        </a>
-    </span>
-
-    <span class="button">
-        <a href="/music/{{ resource_name|space_to_plus }}/songs/">
-            Songs
-        </a>
-    </span>
-    
 </div><!--END dir -->
 
-<hr>
-
-<!-- artist info -->
-<div class="artist-info content">
-    <div id="profile-location">
-        {{ profile.location }}
-    </div>
-
-    <div id="profile-genres">
-        {% for genre in profile.genres %}
-            {{ genre }}
-        {% endfor %}
-    </div>
-</div><!--END artist info -->
 
 <hr>
 
-<!-- table nav -->
-<div class="table-nav content">
-    <div class="title">
-        {{ description }}
-    </div>
 
-    <div id="next">
-        {% if content.next %}
-            <a href = "?page={{ content.next }}" >next</a>
-        {% endif %}
-    </div>
-
-    <div id="current">
-        {% if content.current %}
-            {{ content.current }} of {{ content.total }}
-        {% endif %}
-    </div>
-
-    <div id="previous">
-        {% if content.previous %}
-            <a href = "?page={{ content.previous }}" >previous</a>
-        {% endif %}
-    </div>
-
-</div><!--END table nav -->
 
 <!-- content -->
 <div class="content bbb">
     <table id="content-table">
+
         <tbody id="content-tbody">
             {% for item in content.data %}
                 <tr>
                     <td>
-                        <div class="index">
-                            {{ forloop.counter0|add:content.offset }}
-                        </div>
+                        {{ forloop.counter0|add:content.offset }}
                     </td>
                     <td>
-                        {% if item.name %}
-                            <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
-                        {% else %}
-                            <a href = "/music/{{ item.artist_name|space_to_plus }}/{{ item.title|space_to_plus }}/" >{{ item.title }}</a>
-                        {% endif %}
+                        <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
                     </td>
                 </tr>
             {% endfor %}
